# cz-verilog-check

./: .gitignore  CMakeLists.txt  README.md  main.cpp
